--- a/FRCVideoSplitter2/FRCVideoSplitter2/Properties/Settings.settings
+++ b/FRCVideoSplitter2/FRCVideoSplitter2/Properties/Settings.settings
@@ -35,6 +35,9 @@
     <Setting Name="endOfVideoPadTime" Type="System.String" Scope="User">
       <Value Profile="(Default)">00:00:15</Value>
     </Setting>
+    <Setting Name="matchResultLengthBox" Type="system.string" Scope="user">
+      <Value Profile="(Default)">00:00:15</Value>
+    </Setting>
     <Setting Name="titleCardLocation" Type="System.String" Scope="User">
       <Value Profile="(Default)">Click Browse to Use...</Value>
     </Setting>
